Update MeetUpControllerTest